Implémentation de l’endpoint suppression compte pour la version v1.6.0
